# prog-4

./: CMakeLists.txt  GermanicStrings.cpp  UVa1416.cpp  adjfloyd.cpp  adjlist.cpp  belmandford.cpp  dininc.cpp  djikstra.cpp  edmond aug.cpp  edmond.cpp  fordaug.cpp  fordful.cpp  generator-rel.cpp  generator.cpp  grahamjarvis.cpp  matrica.cpp  matrixfloyd.cpp  myinteger.cpp  myinteger2.cpp  push_relabel.cpp  regex_primer.cpp  triangulejsh.cpp  uamaxflow.cpp
linearna_algebra_trans/: trnsfr.cpp
majmunn/: majmun_rotacija.cpp
push-relabel/: generator-rel.cpp  push_relabel-objasnuvanje.txt  push_relabel1.cpp  push_relabel_prezz.pptx  push_relabel_primeri.txt
string-matching/: Good Substrings.cpp  Longest Duplicate Substring.cpp  Palindromic Characteristics.cpp  Rabin-Karp.cpp  SPOJ - Pattern Find.cpp  trie_en.cpp  trie_mk.cpp
